[package]
name = "cw_nb"
version = "0.1.0"
authors = ["Emīls Piņķis <pinkisemils@gmail.com>"]

[dependencies]
piston = "0.26.0"
piston_window = "*"
piston2d-graphics = "0.19.0"
pistoncore-glutin_window = "0.31.0"
piston2d-opengl_graphics = "0.36.0"
itertools = "0.5.4"
#simd = { git = "https://github.com/huonw/simd"  }
simd = "0.1.1"
